# image-network-streaming

./: .dockerignore  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  backend_fastapi.py  backend_grpc.py  backend_http_multipart.py  backend_imagezmq.py  backend_zmq.py  client.py  frontend.py  package-lock.json  package.json  playground.py  pyproject.toml  requirements.txt  run_local_cluster.sh  serve.py  server.py  setup.py  test_ai_server.py  test_media.py  vitest.config.js
.beads/: issues.jsonl  metadata.json
.github/workflows/: auto-tag.yml  ci.yml
Ultralytics/: settings.json
design/operator-console/: Operator Console.html  README.md  charts.jsx  mock-data.js  sections.jsx  style.css
docker/: Dockerfile
image_network_streaming/: logging.py
image_network_streaming/backend/fastapi/: ai_server.py  api.py
image_network_streaming/backend/grpc/: ai_server.py  ai_server_pb2.py  ai_server_pb2_grpc.py  api.py
image_network_streaming/backend/imagezmq/: ai_server.py  api.py
image_network_streaming/backend/zmq/: ai_server.py  api.py
image_network_streaming/frontend/: media.py
inference_streaming_benchmark/: __init__.py  auth.py  batcher.py  client_registry.py  config.py  engine.py  logging.py  multi_run.py  server.py
inference_streaming_benchmark/backend/: api.py  inference.py  sidecar.py
inference_streaming_benchmark/backend/fastapi/: ai_server.py  api.py
inference_streaming_benchmark/backend/grpc/: ai_server.proto  ai_server.py  ai_server_pb2.py  ai_server_pb2_grpc.py  api.py
inference_streaming_benchmark/backend/http_multipart/: ai_server.py  api.py
inference_streaming_benchmark/backend/imagezmq/: ai_server.py  api.py
inference_streaming_benchmark/backend/zmq/: ai_server.py  api.py
inference_streaming_benchmark/client/: app.py  camera.py  control_client.py  mjpeg.py  processor.py  registration.py  state.py
inference_streaming_benchmark/client/static/: app.js  index.html
inference_streaming_benchmark/frontend/: app.py  camera.py  control_client.py  media.py  mjpeg.py  state.py
inference_streaming_benchmark/frontend/static/: app.js  index.html
inference_streaming_benchmark/server_static/: app.js  app.jsx  charts.jsx  clients-sweep.jsx  data.js  index.html  index.legacy.html  sections.jsx  style.css
inference_streaming_benchmark/transports/: __init__.py  _fastapi_base.py  base.py  codec.py  envelope.py  registry.py
inference_streaming_benchmark/transports/grpc/: __init__.py  ai_server.proto  ai_server_pb2.py  ai_server_pb2.pyi  ai_server_pb2_grpc.py  transport.py
inference_streaming_benchmark/transports/http_multipart/: __init__.py  transport.py
inference_streaming_benchmark/transports/imagezmq/: __init__.py  transport.py
inference_streaming_benchmark/transports/websocket/: __init__.py  transport.py
inference_streaming_benchmark/transports/zmq/: __init__.py  transport.py
scripts/: run_all_backends.sh
tests/: test_ai_server.py  test_auth_middleware.py  test_batcher.py  test_benchmark_collector.py  test_client_app.py  test_client_registry.py  test_codec.py  test_config.py  test_control_plane.py  test_engine.py  test_fake_video_capture.py  test_frontend_state.py  test_grpc_transport.py  test_http_multipart.py  test_http_multipart_raw.py  test_logging_setup.py  test_media.py  test_multi_run.py  test_registry.py  test_transport_session.py  test_websocket.py
tests/js/: data.test.js  sweep-form.test.js  transport-comparison.test.js
